# Surf

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .swiftformat  Cargo.toml  Makefile  README.md  appcast.xml  build-instruct.sh
.circleci/: config.yml
.github/: CONTRIBUTING.md  bug_report.md
App/Android/: .gitignore  settings.gradle.kts
App/Android/app/: build.gradle.kts
App/Android/gradle/wrapper/: gradle-wrapper.properties
App/Linux/: app.magicalsoft.Surf.json  meson.build
App/Linux/data/: app.magicalsoft.Surf.desktop.in  app.magicalsoft.Surf.gschema.xml  app.magicalsoft.Surf.metainfo.xml.in  meson.build
App/Linux/data/icons/: meson.build
App/Linux/po/: POTFILES  meson.build
App/Linux/src/: application.vala  main.vala  meson.build  surf.gresource.xml  window.ui  window.vala
App/Windows/: Surf.sln  TODO.md  Uplink
App/Windows/Surf/: Resource.h  Surf.cpp  Surf.vcxproj.filters
App/iOS/Surf/: ContentView.swift  SearchView.swift  SurfApp.swift
App/iOS/Surf.xcodeproj/: project.pbxproj
App/iOS/Surf/CoreScraper/: LMScraper.swift
App/iOS/Surf/Views/: BlurView.swift  ExpandablePill.swift  NavigationPill.swift  SearchBarView.swift  WebKitBridgeView.swift
App/iOS/SurfTests/: SurfTests.swift
App/iOS/SurfUITests/: SurfUITests.swift
App/macOS/: .gitignore  Uplink  project.yml
App/macOS/Boom/: LLAMAAdaptor.swift  MLAdaptor.swift
App/macOS/MLAdaptor/: LLAMAAdaptor.swift  MLAdaptor.swift
App/macOS/SFTensorl/: DataTypes.swift  FXAdoptor.swift
App/macOS/SFTensorl/Functions/: SUM.swift
App/macOS/Surf/: AppDelegate.swift  ContentView.swift  Info.plist  SceneID.swift  Surf.entitlements  SurfApp.swift
App/macOS/Surf.xcodeproj/: project.pbxproj
App/macOS/Surf/Updater/: UpdaterView.swift  ViewModel.swift
App/macOS/Surf/Views/: ChromeBridgeView.swift  SFAddressBar.swift  SFBrowserTab.swift  SFGlassButton.swift  SFGlassView.swift  SFWebKit.swift  WebKitBridgeView.swift
App/macOS/SurfCore/: Logger.swift
App/macOS/SurfTests/: SurfTests.swift
App/macOS/SurfUITests/: SurfUITests.swift  SurfUITestsLaunchTests.swift
App/macOS/Tensorl/: DataTypes.swift  FXAdoptor.swift
App/visionOS/Surf/: ContentView.swift
App/visionOS/Surf.xcodeproj/: project.pbxproj
App/visionOS/SurfTests/: SurfTests.swift
Config/: project_macos.pkl  swiftlint.pkl
Docs/: SSS.md  ref-build-instructions.md
Source/Bloom/: Package.resolved  Package.swift  README.md
Source/Boom/: Package.swift
Source/CoreLib/: .gitignore  CMakeLists.txt  Package.swift
Source/CoreLib/Tests/CoreLibTests/: CoreLibTests.swift
Source/CoreLib/lib/: ZipUtil.cpp  ZipUtil.hpp  main.cpp
Source/CoreLib/lib/include/: CoreLibBackend.h
Source/CoreURL/: .gitignore  CMakeLists.txt  Package.swift  README.md
Source/CoreURL/Tests/CoreURLTests/: CoreURLTests.swift
Source/CoreURL/lib/: URLParser.cpp  URLParser.hpp  main.cpp
Source/CoreURL/lib/include/: CoreURLBackend.h
Source/FlexDB/: .gitignore  CMakeLists.txt  Package.swift
Source/FlexDB/Tests/FlexDBTests/: FlexDBTests.swift
Source/FlexDB/lib/: BinaryFormat.cpp  BinaryFormat.hpp  FlexDB.hpp  FlexDataFormat.cpp  FlexDataFormat.hpp  LSMTree.cpp  LSMTree.hpp  MemTable.cpp  MemTable.hpp  SSTable.cpp  SSTable.hpp  SimpleBackend.cpp  SimpleBackend.hpp  main.cpp
Source/FlexDB/lib/include/: FlexBackend.h
Source/FlexDB/lib/include/FlexBackend/: FlexBackend.h
Source/FlexDB/src/:  FlexDB.cpp   FlexDB.hpp  LSMTree.cpp  main.cpp
Source/OverlayScript/: .gitignore  CMakeLists.txt  Package.swift  Upfile
Source/OverlayScript/lib/: Lexer.cpp  Lexer.hpp  main.cpp
Source/OverlayScript/lib/include/: OverlayScript.hpp
Source/OverlayScript/src/: Lexer.cpp
Source/SurfSecureScript/: CMakeLists.txt
Source/SurfSecureScript/example/: basics.ssx
Source/SurfSecureScript/src/: LexarAbs.cpp  Lexer.cpp  Lexer.hpp  main.cpp
Source/SurfUniformIdentifier/: CMakeLists.txt
Source/SurfUniformIdentifier/src/: main.cpp
Source/UniformIdentifier/: .gitignore  CMakeLists.txt  Package.swift
Source/src/: URLParser.cpp  URLParser.hpp
Tools/: README.md  bs_cleaner.py  cef-framework-embed.py  cef_src_downloader.py  chromium_src_downloader.py  clean_proj.py  code-formatter.py  devel-clean-project.py  devel-tools-setup.py  init-setup.sh  installer-maker.py  util-proj-backuper.py
chromium/: .gclient_previous_sync_commits
surf-ios/SurfTests/: SurfTests.swift
surf-ios/SurfUITests/: SurfUITests.swift
surf-macOS/surf-macOS/: ContentView.swift
surf-macOS/surf-macOS.xcodeproj/: project.pbxproj
tools/: bs_celaner.py  build-instruct.sh  cef_setup.py  cef_src_downloader.py
(+20 files in other folders)
